<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more"
        android:orderInCategory="1"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/contentRefresh"
                android:icon="@drawable/ic_refresh"
                android:title="@string/refresh"
                app:showAsAction="withText" />

            <item
                android:id="@+id/contentCopy"
                android:icon="@drawable/ic_copy"
                android:title="@string/copy"
                app:showAsAction="withText" />

            <item
                android:id="@+id/contentShare"
                android:icon="@drawable/ic_share"
                android:title="@string/share"
                app:showAsAction="withText" />

            <item
                android:id="@+id/contentOpen"
                android:icon="@drawable/ic_web_icon"
                android:title="@string/open_in_browser" />
        </menu>
    </item>
</menu>