<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="io.github.jixiaoyong.wanandroid.viewmodel.LoginAndRegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:id="@+id/topBg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/inputGroup"
            layout="@layout/view_input_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            bind:isLogin="@{viewModel.isLogin()}" />

        <View
            android:id="@+id/hintLineRight"
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorGrey"
            app:layout_constraintBottom_toBottomOf="@id/noAccountHint"
            app:layout_constraintEnd_toStartOf="@id/noAccountHint"
            app:layout_constraintStart_toStartOf="@id/inputGroup"
            app:layout_constraintTop_toTopOf="@id/noAccountHint" />

        <View
            android:id="@+id/hintLineLeft"
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorGrey"
            app:layout_constraintBottom_toBottomOf="@id/noAccountHint"
            app:layout_constraintEnd_toEndOf="@id/inputGroup"
            app:layout_constraintStart_toEndOf="@id/noAccountHint"
            app:layout_constraintTop_toTopOf="@id/noAccountHint" />

        <TextView
            android:id="@+id/noAccountHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/tip_no_account"
            android:textColor="@color/colorGrey"
            app:hintText="@{viewModel.isLogin()}"
            app:layout_constraintBottom_toTopOf="@id/changeStateBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/changeStateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            app:changeStateText="@{viewModel.isLogin()}"
            app:layout_constraintBottom_toTopOf="@id/skipBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/skip_it"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/copyright"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <include
            android:id="@+id/copyright"
            layout="@layout/view_copyright_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>